--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@ html, body{
 	margin-bottom: 0px;
 	border-bottom: 1px solid #04030f;
 }
+.mainheader{
+	padding-bottom: 0px;
+	margin-bottom: 0px;
+	float: auto;
+	
+	border-bottom: 1px solid #04030f;
+}
+.subheader{
+	padding-top: 10px;
+}
 #name{
 	float: auto;
 }
@@ -99,6 +109,8 @@ h2{
 	border-bottom: 1px solid #04030f;
 	color: #04030f;
 	display: inline-block;
+	padding-bottom: 0px;
+	margin-bottom: 0px;
 }
 h3{
 	font-family: Arial;
@@ -120,8 +132,9 @@ h5{
 	font-size: 3em;
 	color: #04030f;
 	border-bottom: 1px solid #04030f;
-	float: left;
-	margin-left: 26%;
+	padding-bottom: 0px;
+	margin-bottom: 0px;
+	display: inline-block;
 }
 .mobile-button {
 	width: 80%;
